# pane

./: .envrc  .gitignore  CLAUDE.md  Cargo.toml  GENAI.md  LICENSE-BSD2  LICENSE-BSD3  LICENSE-MIT  PLAN.md  README.md  STYLEGUIDE.md  TODO.md  flake.nix  justfile  result  rust-toolchain.toml  spec-analysis.md
.agents/skills/be-systems-engineer/: SKILL.md
.agents/skills/plan9-systems-engineer/: SKILL.md
.agents/skills/session-type-consultant/: SKILL.md
.claude/agent-memory/be-systems-engineer/: MEMORY.md  project_architecture_review.md  project_eact_analysis.md  project_eact_framework_assessment.md  project_scripting_optics_design.md  project_session_crate_review.md  project_tllc_synthesis.md  project_vector_similarity_design.md  reference_decorator_architecture.md
.claude/agent-memory/formal-verifier/: MEMORY.md  project_spec_fidelity_audit_2026_04_05.md
.claude/agent-memory/optics-theorist/: MEMORY.md  project_concrete_encoding_validation.md  project_concrete_optics_guidance.md  project_ctl_optic_boundary.md  project_language_comparison_optics.md  project_optics_layer_design.md  project_profunctor_feasibility.md  reference_fp_library_optics.md
.claude/agent-memory/pane-architect/: MEMORY.md
.claude/agent-memory/plan9-systems-engineer/: MEMORY.md  project_c1_looper_evolution.md  project_code_review_findings.md  project_distributed_mapping.md  project_eact_vs_mpst_decision.md  project_pane_as_trait_assessment.md  project_pane_as_trait_debate.md  project_pane_generic_analysis.md  project_plan9_lineage_audit.md  project_protocol_extension_decisions.md  project_test_suite_design.md  (+2 more)
.claude/agents/: be-systems-engineer.md  formal-verifier.md  optics-theorist.md  pane-architect.md  plan9-systems-engineer.md  session-type-consultant.md
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 0j6rgihbbybb3snj0cy4m7rzixy5f4m2-source  20qaddykmcf7xb2qcy0jll6qr6z4vyw2-source  6wyys48xbbgc38qzjiz9wsx826ikycvr-source  ayh0a73jw1qw2099ai1qf7gfc9glfxxy-source
.serena/: project.yml
.serena/memories/: MEMORY.md  status.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
crates/pane-app/: Cargo.toml
crates/pane-app/examples/: handler.rs  hello.rs  monitor.rs  worker.rs
crates/pane-app/src/: app.rs  backpressure.rs  builder.rs  clipboard.rs  completions.rs  connection.rs  connection_source.rs  dispatch.rs  dispatch_ctx.rs  error.rs  event.rs  exit.rs  exit_reason.rs  filter.rs  handler.rs  handles_request.rs  identity.rs  lib.rs  looper.rs  looper_core.rs  looper_message.rs  messenger.rs  mock.rs  pane.rs  proxy.rs  reply.rs  reply_future.rs  routing.rs  scripting.rs  send_and_wait.rs  service_dispatch.rs  service_handle.rs  shortcuts.rs  subscriber_sender.rs  tag.rs  timer.rs  undo.rs  watchdog.rs
crates/pane-app/tests/: adversarial.rs  bench_ipc.rs  builder_integration.rs  clipboard.rs  concurrent.rs  handler.rs  handshake_integration.rs  hello_pane.rs  looper.rs  pane_event.rs  proxy.rs  pub_sub.rs  pub_sub_stress.rs  pulse_and_shortcuts.rs  stress.rs  stubs.rs  tag_builder.rs  two_pane_echo.rs  undo.rs  unix_connect.rs
crates/pane-comp/: Cargo.toml
crates/pane-comp/src/: cell.rs  glyph_atlas.rs  main.rs  pane_renderer.rs  server.rs  state.rs
crates/pane-fs/: Cargo.toml
crates/pane-fs/src/: attrs.rs  lib.rs  namespace.rs
crates/pane-headless/: Cargo.toml
crates/pane-headless/src/: main.rs  state.rs
crates/pane-hello/: Cargo.toml
crates/pane-hello/src/: main.rs
crates/pane-notify/: Cargo.toml
crates/pane-notify/src/: event.rs  lib.rs  linux.rs  stub.rs  watcher.rs
crates/pane-notify/tests/: basic.rs
crates/pane-optic/: Cargo.toml
crates/pane-proto/: Cargo.toml
crates/pane-proto/src/: address.rs  attrs.rs  cell.rs  color.rs  control.rs  event.rs  exit_reason.rs  filter.rs  flow.rs  handler.rs  handles.rs  lib.rs  message.rs  monadic_lens.rs  obligation.rs  peer_auth.rs  polarity.rs  property.rs  protocol.rs  server.rs  service_frame.rs  state.rs  tag.rs  widget.rs  wire.rs
crates/pane-proto/src/protocols/: lifecycle.rs  mod.rs
crates/pane-proto/src/server/: mod.rs  roster.rs  route.rs  views.rs
crates/pane-proto/tests/: handshake.rs  roundtrip.rs  typed_views.rs
crates/pane-server/: Cargo.toml
crates/pane-server/src/: lib.rs
crates/pane-session/: Cargo.toml
crates/pane-session/src/: active_session.rs  backpressure.rs  bridge.rs  calloop.rs  chan.rs  correlator.rs  dual.rs  error.rs  frame.rs  framing.rs  handshake.rs  lib.rs  macros.rs  message.rs  peer_cred.rs  send.rs  server.rs  teardown.rs  transport.rs  types.rs
crates/pane-session/src/transport/: memory.rs  mod.rs  proxy.rs  reconnecting.rs  tcp.rs  tls.rs  unix.rs
crates/pane-session/tests/: branching.rs  calloop_integration.rs  macros.rs  session_smoke.rs  stress.rs  tcp_transport.rs  unix_transport.rs
docs/: agents.md  ai-kit.md  architecture.md  citations.md  development-methodology.md  distributed-pane.md  foundations.md  introduction.md  kit-documentation-style.md  language-deliberation.md  legacy-wrapping.md  licensing.md  manifesto.md  methodology.md  naming-conventions.md  optics-deliberation.md  optics-design-brief.md  pane-app.md  pane-compositor.md  pane-fs.md  pane-linux.md  scripting-optics-design.md  use-cases.md  v1-subsystem-inventory.md  workflow.md
docs/archive/: agent-perspective.md  scripting-optics-design.md
docs/superpowers/: dlfactris-review.md  haiku-rs-analysis.md  plan9-distributed-mapping.md
nix/: darwin-linux-builder.nix  make-disk-image.nix  run-vm-macos.sh  vm.nix
nix/lib/: services.nix
nix/modules/: compositor.nix  darwin-core.nix  devshell.nix  headless.nix  nixos-core.nix  packages.nix  pre-commit.nix  rust.nix  sixos-compositor.nix  sixos-core.nix  sixos-desktop.nix
openspec/: AGENT.md
reference/: README.md
reference/haiku-book/: LICENSE
reference/haiku-src/: README.md
reference/plan9/: README.md
verification/: pane-verification.agda-lib
verification/proofs/: PeerAuthPlan.agda  Plan.agda
(+563 files in other folders)
