[package]
name = "pane-app"
version = "0.1.0"
edition = "2021"
description = "Actor framework for pane. Single-threaded dispatch, request/reply, service registration."
license = "AGPL-3.0-only"

[dependencies]
pane-proto = { path = "../pane-proto" }
pane-session = { path = "../pane-session" }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
