[package]
name = "pane-app"
version = "0.1.0"
edition = "2021"
description = "Actor framework for pane. Single-threaded dispatch, request/reply, service registration."
license = "AGPL-3.0-only"

[dependencies]
pane-proto = { path = "../pane-proto" }
pane-session = { path = "../pane-session" }
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1" }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v5", "serde"] }
