[package]
name = "pane-app"
version = "0.1.0"
edition = "2021"
description = "Actor framework for pane. Single-threaded dispatch, request/reply, service registration."
license = "AGPL-3.0-only"

[dependencies]
calloop = { version = "0.14", features = ["executor", "futures-io", "stream"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
pane-proto = { path = "../pane-proto" }
pane-session = { path = "../pane-session" }
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1" }

[dev-dependencies]
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v5", "serde"] }
