[package]
name = "pane-fs"
version = "0.1.0"
edition = "2021"
description = "Filesystem namespace for pane. Projects pane state into /pane/ for scripting and inspection."
license = "AGPL-3.0-only"

[dependencies]
pane-proto = { path = "../pane-proto" }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
