[package]
name = "pane-session"
version = "0.1.0"
edition = "2021"
description = "Session-typed IPC channels for pane. Bridges par's session types to wire transports."
license = "AGPL-3.0-only"

[dependencies]
par = { version = "0.3.10", default-features = false }
futures = { version = "0.3", default-features = false, features = ["executor"] }
pane-proto = { path = "../pane-proto" }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
uuid = { version = "1", features = ["v5", "serde"] }
